@@ -1,3 +1,8 @@
+2005-05-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/framework-ps.scm (write-preamble): only load fonts if their
+	filename is a string. 
+
 2005-05-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* scm/output-svg.scm (circle): support circle.
